--- a/src/assets/i18n/se.json
+++ b/src/assets/i18n/se.json
@@ -10,5 +10,8 @@
         "SERVER_ERROR": "Det går inte att ansluta till API-tjänsten",
         "VALIDATION_MSG":"Vänligen ange ett giltigt användarnamn eller lösenord",
         "COPY_RIGHT": "Copyright © 2023. Alla rättigheter reserverade."
+    },
+    "USER": {
+        "USER_DATA":"User Data"
     }
 }
