--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,11 @@
         "SESSION_EXPIRED": "Session expired! Please sign in again",
         "SERVER_ERROR": "Unable to connect to API service",
         "VALIDATION_MSG":"Please enter a valid username or password",
-        "COPY_RIGHT": "Copyright © 2023. All rights reserved."
+        "COPY_RIGHT": "Copyright © 2023. All rights reserved.",
+        "MINLENGTH":"Username must be 4 characters",
+        "USERNAME":"Please provide Username",
+        "PASSWORD": "Please provide password",
+        "PWD_MINLENGTH":"Password must be 6 characters"
     },
     "USER": {
         "USER_DATA":"User Data"
