--- a/src/assets/i18n/se.json
+++ b/src/assets/i18n/se.json
@@ -1,6 +1,6 @@
 {
     "LOGIN": {
-        "LOGIN_TITLE": "Välkommen till världens första kognitiva plattform",
+        "WELCOME": "Welcome User!",
         "LOGIN_LABEL": "Logga in",
         "USERNAME_LABEL": "Användarnamn",
         "PASSWORD_LABEL": "Lösenord",
